--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="FiveM, Roleplay, BritishRP, Gang, Gaming, GTA5, GTA6, FiveMRP, TikTok">
+    <meta name="description" content="Live the story, Shape the city">
     <title>Expand Network - Roleplay to your desire</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
