--- a/pages/rulebook.html
+++ b/pages/rulebook.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="FiveM, Roleplay, BritishRP, Gang, Gaming, GTA5, GTA6, FiveMRP, TikTok">
+    <meta name="description" content="Live the story, Shape the city">
+    <meta name="theme-color" content="#3aebeb">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <title>Rulebook - Expand Network</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
