--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="FiveM, Roleplay, BritishRP, Gang, Gaming, GTA5, GTA6, FiveMRP, TikTok">
     <meta name="description" content="Live the story, Shape the city">
     <meta name="theme-color" content="#3aebeb">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>404 - Page Not Found | Expand Network</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
